--- a/templates/orders/user/payment.html
+++ b/templates/orders/user/payment.html
@@ -112,7 +112,8 @@
                                 </label>
                                 <input type="file" name="payment_image" id="payment_image" required
                                     class="file-input file-input-bordered file-input-sm max-w-xs mt-6"
-                                    accept="image/png, image/jpeg" onchange="previewPaymentImage(event)">
+                                    accept=".jpg, .jpeg, .png" 
+                                    onchange="previewPaymentImage(event)">
                             </div>
                         </div>
 
